# BuzzCognifly

./: README.md  update_firmware.sh
src/: CMakeLists.txt
src/buzz/: backup_buzz_utility.c  buzz_utility.c  buzz_utility.h  buzz_utility_commhub.c  buzz_utility_primative_working.c  buzz_utility_silent.c  buzz_utility_silent_cognifly.c  buzz_utility_verbose_with_problems.c  buzzcognifly_closures.c  buzzcognifly_closures.h  bzzcognifly.c  cognifly_utility.c  cognifly_utility.h  fc_inav.cpp  fc_inav.h  intermediate.cpp  intermediate.h
src/buzz/include/: QPSolver.h  lambda_2.h
src/buzz/include/alglib/: ap.cpp
src/buzz/include/inc_fc/msp/: Client.hpp  msp_msg.hpp
src/buzz/old qp solver backup/include/: VoronoiDiagramGenerator.h
src/buzz/qp_hook/: buzz_utility.c  buzzkh4_closures.c  buzzkh4_closures.h  intermediate.cpp  intermediate.h  kh4_utility.c
src/buzz/qp_hook/include/: Cell.h
src/buzz/qp_hook/src/: QPSolver.cpp  VoronoiDiagramGenerator.cpp
src/buzz/src/: Diagram.cpp  QPSolver.cpp  VoronoiDiagramGenerator.cpp  lambda_2.cpp
src/buzz/src/src_fc/: Client.cpp
tests/basic/: dummy_test.bdb  dummy_test.bo  dummy_test.bzz
tests/collision_avoidance/: collision_avoidance_mission.bzz  run_stuff.sh
tests/energy/: battery_swap_cognifly.bdb  battery_swap_cognifly.bo  battery_swap_cognifly.bzz  run_stuff.sh  vec2.bzz
tests/g2g/: gtg.bdb  gtg.bo  gtg.bzz
tests/hovering/: hovering_test.bdb  hovering_test.bo  hovering_test.bzz  run.sh
tests/table_test/: run.sh  table_test.bzz
